--- a/examples/udp-server-kafka-producer/CMakeLists.txt
+++ b/examples/udp-server-kafka-producer/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_executable (producer main.cpp)
+add_executable (udp-server-kafka-producer main.cpp)
 add_library(ert_logger STATIC IMPORTED)
 add_library(cppkafka STATIC IMPORTED)
 add_library(rdkafka STATIC IMPORTED)
 set_property(TARGET ert_logger PROPERTY IMPORTED_LOCATION /usr/local/lib/ert/libert_logger.a)
 set_property(TARGET cppkafka PROPERTY IMPORTED_LOCATION /usr/local/lib/libcppkafka.a)
 set_property(TARGET rdkafka PROPERTY IMPORTED_LOCATION /usr/local/lib/librdkafka.a)
-target_link_libraries( producer
+target_link_libraries( udp-server-kafka-producer
 PRIVATE
 ${CMAKE_EXE_LINKER_FLAGS}
         ert_logger
